# bsv-wallet-cli

./: .env.example  .gitignore  .mcp.json  BEEF-COMPACTION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LAUNCH-ANNOUNCEMENT.md  LICENSE  OUTREACH-PLAN.md  QUALITY-LOOP.md  README.md  WALLET-HEALTH.md  WORM-TX-INVESTIGATION.md  install.sh
.github/workflows/: ci.yml  release.yml
mcp/: Cargo.toml
mcp/src/: main.rs
src/: CLAUDE.md  LEARNING.md  cli.rs  context.rs  main.rs
src/commands/: CLAUDE.md  LEARNING.md  actions.rs  address.rs  balance.rs  compact.rs  daemon.rs  fund.rs  identity.rs  init.rs  mod.rs  outputs.rs  send.rs  serve.rs  services.rs  split.rs  ui.rs
src/server/: CLAUDE.md  LEARNING.md  handlers.rs  mod.rs  types.rs
src/ui/: index.html
tests/: integration.rs
tests/e2e/: package-lock.json  package.json  run.js
tests/e2e/lib/: setup.js  wallet-client.js  woc.js
tests/e2e/scenarios/: 01-direct-transfer.js  02-cli-send-fund.js  03-round-trip.js  04-woc-fetch.js  05-cross-wallet-crypto.js  06-certificate-lifecycle.js  07-unsigned-action.js  08-error-resilience.js  09-history-accounting.js  10-concurrent-sends.js  11-nosend-flow.js  12-basket-routing.js  13-key-linkage.js  14-beef-roundtrip-broadcast.js  15-nosend-utxo-isolation.js  16-cli-parity.js  17-cli-split-spend.js  18-cli-compact.js  19-cli-services.js  20-ui-playwright.js  21-mcp-parity.js  22-rapid-internalize-spend.js
