[workspace]
members = [".", "mcp"]
resolver = "2"

[package]
name = "bsv-wallet-cli"
version = "0.1.5"
edition = "2021"
license = "MIT"
authors = ["John Calhoun"]
description = "Self-hosted BSV wallet CLI and BRC-100 server, wire-compatible with MetaNet Client"
repository = "https://github.com/Calhooon/bsv-wallet-cli"
homepage = "https://github.com/Calhooon/bsv-wallet-cli"
keywords = ["bsv", "bitcoin", "wallet", "brc-100"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[lib]
name = "bsv_wallet_cli"
path = "src/lib.rs"

[[bin]]
name = "bsv-wallet"
path = "src/main.rs"

[dependencies]
bsv-wallet-toolbox = { package = "bsv-wallet-toolbox-rs", version = "0.3.12", features = ["sqlite"] }
bsv-sdk = { package = "bsv-rs", version = "0.3.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
hex = "0.4"
url = "2"
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

[features]
default = []
tls = ["axum-server"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

